Assignment 1/src/traceback.txt
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/pudb/__init__.py", line 93, in runscript
    dbg._runscript(mainpyfile)
  File "/usr/local/lib/python2.7/dist-packages/pudb/debugger.py", line 432, in _runscript
    self.run(statement, globals=globals_, locals=locals_)
  File "/usr/lib/python2.7/bdb.py", line 400, in run
    exec cmd in globals, locals
  File "<string>", line 1, in <module>
  File "run_experiments.py", line 73
    if len(u_data)!=0 and len(v_data)!=0:
    ^
IndentationError: unexpected indent
